--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "node": "^17.7.2",
     "sequelize": "^5.22.5"
   }
 }
